# Frogpants-Showbot

./: .gitignore  README.md  bluesky_testing.ipynb  bot_commands.txt  frogbot_discord.py  funcs.py  function_testing.ipynb  modularized.ipynb  oauth2_troubleshoot.ipynb  params.bak  params.dir  program_output.txt  pyproject.toml  requirements.txt  selenium_backup_scrape.py  showbot_YT.py  streamlit_YT_showbot.py  streamlit_gui.py  streamlit_gui_simplified.py  subprocess_testing.ipynb  test.py  thumbnail_funsies.ipynb
.temp/: processmanagercache
archive/: MondayShow-2024-10-30.csv  TMS-2024-10-31.csv  TMS-2024-11-11.csv  TMS-2024-11-12.csv  TMS-2024-11-13.csv  TMS-2024-11-14.csv  TMS-2024-11-15.csv  TMS-2024-11-18.csv  TMS-2024-11-19.csv  TMS-2024-11-20.csv  TMS-2024-11-22.csv  TMS-2024-11-25.csv  TMS-2024-11-26.csv  TMS-2024-11-27.csv  TMS-2024-11-4.csv  TMS-2024-11-5.csv  TMS-2024-11-6.csv  TMS-2024-11-7.csv  TMS-2024-12-10.csv  TMS-2024-12-11.csv  TMS-2024-12-12.csv  TMS-2024-12-13.csv  TMS-2024-12-16.csv  TMS-2024-12-17.csv  TMS-2024-12-18.csv  TMS-2024-12-19.csv  TMS-2024-12-2.csv  TMS-2024-12-20.csv  TMS-2024-12-3.csv  TMS-2024-12-30.csv  TMS-2024-12-4.csv  TMS-2024-12-5.csv  TMS-2024-12-6.csv  TMS-2024-12-9.csv  TMS-2025-1-10.csv  TMS-2025-1-13.csv  TMS-2025-1-14.csv  TMS-2025-1-15.csv  TMS-2025-1-16.csv  TMS-2025-1-17.csv  (+40 more)
bacon_gifs/: kevin1
thumbnails/: finalized_df_thumbnails.csv
thumbnails/checkpoints/: all_tms_thumbnail_history.csv  checkpoint.csv  checkpoint_before_assumptions.csv  cleaned_missing_dates_to_search.csv  df_processed.csv  has_date.csv  (+15 more)
